--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,9 @@ elseif(MSVC)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Ox")
   add_definitions("/DGBF_OMP_STATS")
 else()
-  message(FATAL_ERROR "Unknown compiler.")
+  if(${CMAKE_CXX_COMPILER})
+    message(WARNING "Unsupported compiler")
+  endif()
 endif()
 
 add_executable(${CMAKE_PROJECT_NAME} gbfilter.cc)
